<resources>
    <string name="app_name">Swee tHome</string>
    <string name="hintUser">ejemplo@email.com</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="btloginidiom">Login</string>
    <string name="welcomeText">Welcome</string>
    <string name="regIntro">Welcome to the Sweet Home portal, please complete the fields below to proceed with your registration:</string>
    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="NIT">NIT</string>
    <string name="email">Email</string>
    <string name="regPhone">Phone</string>
    <string name="regOutro">Use at least eight characters with a combination of letters, numbers, and symbols.</string>
    <string name="regPassword">Password</string>
    <string name="regPrivacy">I have read and accept the terms and privacy policies.</string>
    <string name="text1">Accompaniment, advice and economic support for family strengthening.</string>
    <string name="who_are_we">Who are we?</string>
    <string name="who_are_we_text">The Sweet Home is a modality of restoration of rights that consists of accompaniment, advice and economic support for family strengthening, this measure applies to families that have the conditions for the care, affection and attention of children under 18 years of age with disabilities.</string>
    <string name="What_do_we_do">What do we do?</string>
    <string name="What_do_we_do_text">This type of care offers beneficiary families tools to improve the care of their children with disabilities, in their housing conditions, as well as enhances their management capacity for the use of institutional, social and community service networks, which facilitate the exercise of their rights.</string>
    <string name="fab_text">Element added</string>
    <string name="agendar_citaP">Schedule an appointment with psychology</string>
    <string name="agendar_citaM">Schedule appointment general medicine</string>
    <string name="acompañamiento">Next visit</string>
    <string name="tarea">Homework</string>
    <string name="hora">Hour</string>
    <string name="lugar">Place</string>
    <string name="home">Home</string>
    <string name="errorpassword">Invalite Password</string>
    <string name="erroruser">Invalite Username</string>
    <string name="text_welcome">Welcome</string>
    <string name="usernoregistrado">That username or password did not work.</string>
    <string name="registerwithgoogle">Register Google</string>
    <string name="registerfacebook">Register Facebook</string>
    <string name="olvidoContraseña">Forgot my password?</string>
    <string name="ya_tienes_cuenta">Already have an account? Access</string>
    <string name="Save">Save</string>
    <string name="Task">Task</string>
    <string name="Time">Time</string>
    <string name="Place">Place</string>
</resources>